# switch

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
choco/: switch.nuspec  update.ps1
choco/pre_tools/: LICENSE.txt  VERIFICATION.txt  chocolateybeforemodify.ps1  chocolateyinstall.ps1  chocolateyuninstall.ps1
scripts/: copyinstall.bat  install-logontask.ps1  install.ps1  uninstall.ps1
src/: clipboard.rs  com.rs  console.rs  create_process.rs  lib.rs  listcontentprovider.rs  log.rs  main.rs  path.rs  setforegroundwindow.rs  startappsprovider.rs  waitlist.rs  windowgeometry.rs  windowprovider.rs  windows.rs  windows2.rs
src/noconsole/: main.rs
src/quakerun/: main.rs
tests/: directory.rs  pipesecurity.rs  windowgeometry.rs
