[package]
name = "switch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.22" }
tui = { version = "0.17.0" }
# walkdir = "2"
clap = "3.1.8"
log = "0.4"
log4rs = "1.1.1"
anyhow = "1.0"
serde = "1.0.138"
serde_json = "1.0.82"
bincode = "1.3.3"
chrono = "0.4.19"
threadpool = "1.8.1"

[dependencies.rocksdb]
# Requires clang, install with choco install -y llvm
version = "0.18.0"
default-features = false
features = ["lz4"]

[dependencies.windows]
version = "0.34.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_Graphics_Dwm",
    "Win32_System_SystemServices",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_HiDpi",
    "Win32_System_SystemInformation",
    "Win32_System_Environment",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_Security_Authorization",
    "Win32_System_IO",
    "Win32_System_WinRT",
    "Foundation_Collections",
    "Foundation",
    "ApplicationModel",
    "ApplicationModel_Core",
    "Management_Deployment_Preview",
    "Management_Deployment",
    "Win32_Security_AppLocker",
    "Win32_NetworkManagement_NetManagement",
    "Win32_System_DataExchange",
]

# Without this, vcruntime140.dll and others will be needed to run output.
[build-dependencies]
static_vcruntime = "2.0"

[features]
default = []
test_pipe_security = []
